docs/api/qiskit/0.19/qiskit.aqua.components.uncertainty_models.NormalDistribution.mdx
---
title: NormalDistribution (v0.19)
description: API reference for qiskit.aqua.components.uncertainty_models.NormalDistribution in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.NormalDistribution
---

# NormalDistribution

<Class id="qiskit.aqua.components.uncertainty_models.NormalDistribution" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/uncertainty_models/normal_distribution.py" signature="NormalDistribution(num_target_qubits, mu=0, sigma=1, low=- 1, high=1)" modifiers="class">
  The Univariate Normal Distribution.

  Normal distribution, truncated to lower and upper bound and discretized on a grid defined by the number of qubits.

  **Parameters**

  *   **num\_target\_qubits** (`int`) – Number of qubits it acts on, has a minimum value of 1.
  *   **mu** (`float`) – Expected value of considered normal distribution
  *   **sigma** (`float`) – standard deviation of considered normal distribution
  *   **low** (`float`) – Lower bound, i.e., the value corresponding to |0…0> (assuming an equidistant grid)
  *   **high** (`float`) – Upper bound, i.e., the value corresponding to |1…1> (assuming an equidistant grid)

  ## Attributes

  <span id="normaldistribution-high" />

  ### high

  <Attribute id="qiskit.aqua.components.uncertainty_models.NormalDistribution.high">
    returns high
  </Attribute>

  <span id="normaldistribution-low" />

  ### low

  <Attribute id="qiskit.aqua.components.uncertainty_models.NormalDistribution.low">
    returns low
  </Attribute>

  <span id="normaldistribution-num-target-qubits" />

  ### num\_target\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.NormalDistribution.num_target_qubits">
    Returns the number of target qubits
  </Attribute>

  <span id="normaldistribution-num-values" />

  ### num\_values

  <Attribute id="qiskit.aqua.components.uncertainty_models.NormalDistribution.num_values">
    returns number of values
  </Attribute>

  <span id="normaldistribution-probabilities" />

  ### probabilities

  <Attribute id="qiskit.aqua.components.uncertainty_models.NormalDistribution.probabilities">
    returns probabilities
  </Attribute>

  <span id="normaldistribution-values" />

  ### values

  <Attribute id="qiskit.aqua.components.uncertainty_models.NormalDistribution.values">
    returns values
  </Attribute>

  ## Methods

  <span id="normaldistribution-build" />

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build" signature="NormalDistribution.build(qc, q, q_ancillas=None, params=None)" />

  <span id="normaldistribution-build-controlled" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled" signature="NormalDistribution.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="normaldistribution-build-controlled-inverse" />

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse" signature="NormalDistribution.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="normaldistribution-build-controlled-inverse-power" />

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse_power" signature="NormalDistribution.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="normaldistribution-build-controlled-power" />

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_power" signature="NormalDistribution.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="normaldistribution-build-inverse" />

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse" signature="NormalDistribution.build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  <span id="normaldistribution-build-inverse-power" />

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse_power" signature="NormalDistribution.build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="normaldistribution-build-power" />

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_power" signature="NormalDistribution.build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="normaldistribution-get-num-qubits" />

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits" signature="NormalDistribution.get_num_qubits()">
    returns number of qubits
  </Function>

  <span id="normaldistribution-get-num-qubits-controlled" />

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits_controlled" signature="NormalDistribution.get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  <span id="normaldistribution-pdf-to-probabilities" />

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.pdf_to_probabilities" signature="NormalDistribution.pdf_to_probabilities(pdf, low, high, num_values)" modifiers="static">
    Takes a probability density function (pdf), and returns a truncated and discretized array of probabilities corresponding to it

    **Parameters**

    *   **pdf** (*function*) – probability density function
    *   **low** (*float*) – lower bound of equidistant grid
    *   **high** (*float*) – upper bound of equidistant grid
    *   **num\_values** (*int*) – number of grid points

    **Returns**

    array of probabilities

    **Return type**

    list
  </Function>

  <span id="normaldistribution-required-ancillas" />

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas" signature="NormalDistribution.required_ancillas()">
    returns required ancillas
  </Function>

  <span id="normaldistribution-required-ancillas-controlled" />

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas_controlled" signature="NormalDistribution.required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>
</Class>

