docs/api/qiskit/0.24/qiskit.aqua.components.uncertainty_models.NormalDistribution.mdx
---
title: NormalDistribution
description: API reference for qiskit.aqua.components.uncertainty_models.NormalDistribution
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.NormalDistribution
---

<span id="qiskit-aqua-components-uncertainty-models-normaldistribution" />

# qiskit.aqua.components.uncertainty\_models.NormalDistribution

<Class id="qiskit.aqua.components.uncertainty_models.NormalDistribution" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/components/uncertainty_models/normal_distribution.py" signature="NormalDistribution(num_target_qubits, mu=0, sigma=1, low=- 1, high=1)">
  The Univariate Normal Distribution.

  Normal distribution, truncated to lower and upper bound and discretized on a grid defined by the number of qubits.

  **Parameters**

  *   **num\_target\_qubits** (`int`) – Number of qubits it acts on, has a minimum value of 1.
  *   **mu** (`float`) – Expected value of considered normal distribution
  *   **sigma** (`float`) – standard deviation of considered normal distribution
  *   **low** (`float`) – Lower bound, i.e., the value corresponding to |0…0> (assuming an equidistant grid)
  *   **high** (`float`) – Upper bound, i.e., the value corresponding to |1…1> (assuming an equidistant grid)

  ### \_\_init\_\_

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.__init__" name="__init__" signature="__init__(num_target_qubits, mu=0, sigma=1, low=- 1, high=1)">
    **Parameters**

    *   **num\_target\_qubits** (`int`) – Number of qubits it acts on, has a minimum value of 1.
    *   **mu** (`float`) – Expected value of considered normal distribution
    *   **sigma** (`float`) – standard deviation of considered normal distribution
    *   **low** (`float`) – Lower bound, i.e., the value corresponding to |0…0> (assuming an equidistant grid)
    *   **high** (`float`) – Upper bound, i.e., the value corresponding to |1…1> (assuming an equidistant grid)
  </Function>

  ## Methods

  |                                                                                                                                                                                                                                                |                                                                                                                                |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.__init__ "qiskit.aqua.components.uncertainty_models.NormalDistribution.__init__")(num\_target\_qubits\[, mu, sigma, …])                                             | **type num\_target\_qubits**`int`                                                                                              |
  | [`build`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build "qiskit.aqua.components.uncertainty_models.NormalDistribution.build")(qc, q\[, q\_ancillas, params])                                                             |                                                                                                                                |
  | [`build_controlled`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled "qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled")(qc, q, q\_control\[, …])                                  | Adds corresponding controlled sub-circuit to given circuit                                                                     |
  | [`build_controlled_inverse`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse "qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse")(qc, q, q\_control\[, …])          | Adds controlled inverse of corresponding sub-circuit to given circuit                                                          |
  | [`build_controlled_inverse_power`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse_power "qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse_power")(qc, q, …\[, …]) | Adds controlled, inverse, power of corresponding circuit.                                                                      |
  | [`build_controlled_power`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_power "qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_power")(qc, q, q\_control, power)               | Adds controlled power of corresponding circuit.                                                                                |
  | [`build_inverse`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse "qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse")(qc, q\[, q\_ancillas])                                             | Adds inverse of corresponding sub-circuit to given circuit                                                                     |
  | [`build_inverse_power`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse_power "qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse_power")(qc, q, power\[, q\_ancillas])                    | Adds inverse power of corresponding circuit.                                                                                   |
  | [`build_power`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.build_power "qiskit.aqua.components.uncertainty_models.NormalDistribution.build_power")(qc, q, power\[, q\_ancillas])                                            | Adds power of corresponding circuit.                                                                                           |
  | [`get_num_qubits`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits "qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits")()                                                               | returns number of qubits                                                                                                       |
  | [`get_num_qubits_controlled`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits_controlled "qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits_controlled")()                              | returns number of qubits controlled                                                                                            |
  | [`pdf_to_probabilities`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.pdf_to_probabilities "qiskit.aqua.components.uncertainty_models.NormalDistribution.pdf_to_probabilities")(pdf, low, high, num\_values)                  | Takes a probability density function (pdf), and returns a truncated and discretized array of probabilities corresponding to it |
  | [`required_ancillas`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas "qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas")()                                                      | returns required ancillas                                                                                                      |
  | [`required_ancillas_controlled`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas_controlled "qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas_controlled")()                     | returns required ancillas controlled                                                                                           |

  ## Attributes

  |                                                                                                                                                                                         |                                     |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
  | [`high`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.high "qiskit.aqua.components.uncertainty_models.NormalDistribution.high")                                        | returns high                        |
  | [`low`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.low "qiskit.aqua.components.uncertainty_models.NormalDistribution.low")                                           | returns low                         |
  | [`num_target_qubits`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.num_target_qubits "qiskit.aqua.components.uncertainty_models.NormalDistribution.num_target_qubits") | Returns the number of target qubits |
  | [`num_values`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.num_values "qiskit.aqua.components.uncertainty_models.NormalDistribution.num_values")                      | returns number of values            |
  | [`probabilities`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.probabilities "qiskit.aqua.components.uncertainty_models.NormalDistribution.probabilities")             | returns probabilities               |
  | [`values`](#qiskit.aqua.components.uncertainty_models.NormalDistribution.values "qiskit.aqua.components.uncertainty_models.NormalDistribution.values")                                  | returns values                      |

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build" name="build" signature="build(qc, q, q_ancillas=None, params=None)" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled" name="build_controlled" signature="build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse" name="build_controlled_inverse" signature="build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_inverse_power" name="build_controlled_inverse_power" signature="build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_controlled_power" name="build_controlled_power" signature="build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse" name="build_inverse" signature="build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_inverse_power" name="build_inverse_power" signature="build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.build_power" name="build_power" signature="build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits" name="get_num_qubits" signature="get_num_qubits()">
    returns number of qubits
  </Function>

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.get_num_qubits_controlled" name="get_num_qubits_controlled" signature="get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  ### high

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.high" name="high" signature="property high">
    returns high
  </Function>

  ### low

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.low" name="low" signature="property low">
    returns low
  </Function>

  ### num\_target\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.num_target_qubits" name="num_target_qubits" signature="property num_target_qubits">
    Returns the number of target qubits
  </Function>

  ### num\_values

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.num_values" name="num_values" signature="property num_values">
    returns number of values
  </Function>

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.pdf_to_probabilities" name="pdf_to_probabilities" signature="static pdf_to_probabilities(pdf, low, high, num_values)">
    Takes a probability density function (pdf), and returns a truncated and discretized array of probabilities corresponding to it

    **Parameters**

    *   **pdf** (*function*) – probability density function
    *   **low** (*float*) – lower bound of equidistant grid
    *   **high** (*float*) – upper bound of equidistant grid
    *   **num\_values** (*int*) – number of grid points

    **Returns**

    array of probabilities

    **Return type**

    list
  </Function>

  ### probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.probabilities" name="probabilities" signature="property probabilities">
    returns probabilities
  </Function>

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas" name="required_ancillas" signature="required_ancillas()">
    returns required ancillas
  </Function>

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.required_ancillas_controlled" name="required_ancillas_controlled" signature="required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>

  ### values

  <Function id="qiskit.aqua.components.uncertainty_models.NormalDistribution.values" name="values" signature="property values">
    returns values
  </Function>
</Class>

